--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -25,8 +25,8 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-# the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     qcom_diag
+# the DIAG device node HAS TO BE  world writable/readable.
+/dev/diag                 0777   system     oem_2950
 
 /dev/genlock              0666   system     system
 /dev/kgsl                 0666   system     system
@@ -145,8 +145,8 @@
 /dev/msm_sps              0660   system     audio
 /dev/msm_voicememo        0660   system     audio
 /dev/radio0               0640   fm_radio   fm_radio
-/dev/smd3                 0660   bluetooth  net_bt_stack
-/dev/smd2                 0660   bluetooth  net_bt_stack
+/dev/smd3                 0660   bluetooth  bluetooth
+/dev/smd2                 0660   bluetooth  bluetooth
 /dev/ttyHSL0              0660   radio      system
 /dev/ttyHSL1              0660   system     system
 /dev/mdm                  0660   system     radio
