Cleanup to init

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -621,7 +621,9 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 service qmuxd /system/bin/qmuxd
     class main
     user root
-    group radio audio bluetooth gps oem_2950 diag log qcom_diag
+    group root readproc
+
+group radio audio bluetooth gps oem_2950 diag log qcom_diag
 
 service netmgrd /system/bin/netmgrd
     class main
