--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -529,16 +529,23 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 20000
     write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 99
     write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 998400
+    write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
+    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 40000
+    write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 30000
+    write /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor 100000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 300000    
     
-    # Disable all hotplugs
-    write /sys/module/intelli_plug/parameters/intelli_plug_active 0
-    write /sys/module/intelli_plug/parameters/touch_boost_active 0
-    write /sys/module/cpu_boost/parameters/input_boost_ms 0
-    write /sys/module/msm_hotplug/msm_enabled 0
-
-    # we dont need M(ake)P(oor)decision
-    stop mpdecision
-
+    write /sys/module/msm_thermal/core_control/enabled 1
+    
+    # Configure the cpu-boost module
+    write /sys/module/cpu_boost/parameters/boost_ms 20
+    write /sys/module/cpu_boost/parameters/sync_threshold 1728000
+    write /sys/module/cpu_boost/parameters/input_boost_freq 1497600
+    write /sys/module/cpu_boost/parameters/input_boost_ms 40    
+    
     # Bring all CPUs online, and set node permissions AFTER disabling hotplugs otherwise
     # only 1 core will be active
     write /sys/devices/system/cpu/cpu1/online 1
@@ -618,22 +625,16 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     user camera
     group camera system inet input graphics
 
-service qmuxd /system/bin/qmuxd
+service mpdecision /vendor/bin/mpdecision --avg_comp
     class main
     user root
     group root readproc
-
-group radio audio bluetooth gps oem_2950 diag log qcom_diag
-
-service netmgrd /system/bin/netmgrd
-    class main
-    user root
-    group radio audio bluetooth gps oem_2950 diag log qcom_diag
-
-service debug_log /system/bin/sh /debug_log.sh
-    class main
-    user root
     disabled
+
+service qmuxd /vendor/bin/qmuxd
+    class core
+    user radio
+    group radio audio bluetooth gps oem_2950 log
 
 service qseecomd /system/bin/qseecomd
     class core
@@ -648,7 +649,7 @@ service rfs_access /system/bin/rfs_access
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
-    disabled
+    group system wakelock
 
 on property:ro.boot.emmc=true
     start rfs_access
@@ -665,12 +666,14 @@ on property:persist.sys.ssr.restart_level=1
 
 on property:persist.sys.ssr.restart_level=3
     write /sys/module/subsystem_restart/parameters/restart_level 3
-
+    
 service thermal-engine /system/bin/thermal-engine -c /etc/thermal-engine-8226.conf
-    class core
-    seclabel u:r:thermal-engine:s0
-    user root
-    group root
+   class main
+   user root
+   socket thermal-send-client stream 0666 system system
+   socket thermal-recv-client stream 0660 system system
+   socket thermal-recv-passive-client stream 0666 system system
+   group root   
 
 service time_daemon /system/bin/time_daemon
     class late_start
