--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -73,6 +73,10 @@ on fs
 
     # Kickstart the Wireless subsystem
     write /dev/wcnss_wlan 1
+    
+    # Adaptive LMK
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059    
 
     start debug_log
 
