--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -1,36 +1,56 @@
-#Uncommenting these urls would only enable
-#the power up auto injection and force injection(test case).
-XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
-XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+#XTRA_SERVER_1=https://xtrapath1.izatcloud.net/xtra3grc.bin
+#XTRA_SERVER_2=https://xtrapath2.izatcloud.net/xtra3grc.bin
+#XTRA_SERVER_3=https://xtrapath3.izatcloud.net/xtra3grc.bin
+
+#Version check for XTRA
+#DISABLE = 0
+#AUTO    = 1
+#XTRA2   = 2
+#XTRA3   = 3
+XTRA_VERSION_CHECK=1
 
 # Error Estimate
 # _SET = 1
 # _CLEAR = 0
 ERR_ESTIMATE=0
 
-#Test
-NTP_SERVER=time.gpsonextra.net
-#Asia
-# NTP_SERVER=asia.pool.ntp.org
-#Europe
-# NTP_SERVER=europe.pool.ntp.org
-#North America
-# NTP_SERVER=north-america.pool.ntp.org
+# Worldwide
+NTP_SERVER=1.android.pool.ntp.org
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 1
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
+
+# Below bit mask configures how GPS functionalities
+# should be locked when user turns off GPS on Settings
+# Set bit 0x1 if MO GPS functionalities are to be locked
+# Set bit 0x2 if NI GPS functionalities are to be locked
+# default - non is locked for backward compatibility
+#GPS_LOCK = 0
 
 # supl version 2.0
 SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=1
+#SUPL_ES=0
+# Sensor R&D : Non-SUPL ES should be default
+
+#Choose PDN for Emergency SUPL
+#1 - Use emergency PDN
+#0 - Use regular SUPL PDN for Emergency SUPL
+USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
+
+#SUPL_MODE is a bit mask set in config.xml per carrier by default.
+#If it is uncommented here, this value will over write the value from
+#config.xml.
+#MSA=0X2
+#MSB=0X1
+#Sensor R&D : Change default bit mask
+#SUPL_MODE=1
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -39,7 +59,7 @@ SUPL_ES=1
 # ON_DEMAND_TIME = 0x10
 # GEOFENCE = 0x20
 # default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
-CAPABILITIES=0x37
+CAPABILITIES=0x31
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -50,14 +70,20 @@ CAPABILITIES=0x37
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
-SUPL_HOST=supl.google.com
-SUPL_PORT=7276
+#SUPL_HOST=supl.google.com
+#SUPL_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
+
+# Bitmask of slots that are available
+# for write/install to, where 1s indicate writable,
+# and the default value is 0 where no slots
+# are writable. For example, AGPS_CERT_WRITABLE_MASK
+# of b1000001010 makes 3 slots available
+# and the remaining 7 slots unwritable.
+#AGPS_CERT_WRITABLE_MASK=0
 
 ####################################
 #  LTE Positioning Profile Settings
@@ -66,14 +92,13 @@ SUPL_PORT=7276
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
+#LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
 
 ################################
 # EXTRA SETTINGS
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
 NMEA_PROVIDER=1
-
 # Mark if it is a SGLTE target (1=SGLTE, 0=nonSGLTE)
 SGLTE_TARGET=0
 
@@ -83,11 +108,5 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0x0
-
-##################################################
-# Delete only Ephemeris files
-##################################################
-#0 : off - default
-#1 : on - Erase only eph files when we use 'delete aiding data' function.
-DEL_EPH_ONLY = 0
+# Sensor R&D : This will not be injected to MODEM
+A_GLONASS_POS_PROTOCOL_SELECT = 0
